--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,9 +6,9 @@
   </aside>
   <nav>
     <div class="grid grid-flow-col gap-4">
-      <a href="#" class="link link-hover">Terms of Service</a>
-      <a href="#" class="link link-hover">Privacy Policy</a>
-      <a href="#" class="link link-hover">Contact</a>
+      <%= link_to "Terms of Service", terms_path, class: "link link-hover" %>
+      <%= link_to "Privacy Policy", privacy_path, class: "link link-hover" %>
+      <a href="mailto:support@example.com" class="link link-hover">Contact</a>
     </div>
   </nav>
 </footer>
