--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -51,9 +51,15 @@
 
     <% if user_signed_in? %>
       <div class="dropdown dropdown-end">
-        <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar placeholder">
-          <div class="bg-primary text-primary-content w-10 rounded-full">
-            <span><%= current_user.display_name.first.upcase %></span>
+        <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+          <div class="w-10 rounded-full">
+            <% if current_user.avatar_url.present? %>
+              <%= image_tag current_user.avatar_url, alt: current_user.display_name, referrerpolicy: "no-referrer" %>
+            <% else %>
+              <div class="bg-primary text-primary-content w-10 h-10 rounded-full flex items-center justify-center">
+                <span class="text-lg"><%= current_user.display_name.first.upcase %></span>
+              </div>
+            <% end %>
           </div>
         </div>
         <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
@@ -61,9 +67,7 @@
             <span><%= current_user.display_name %></span>
           </li>
           <li><%= link_to "Dashboard", dashboard_path %></li>
-          <li>
-            <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "w-full text-left" %>
-          </li>
+          <li><%= link_to "Settings", settings_path %></li>
         </ul>
       </div>
     <% else %>
